--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prebuild": "git lfs install --local && git lfs fetch --all && git lfs checkout",
     "start": "next start",
     "lint": "next lint"
   },
